--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div class="container">
-  <h1>Hello from BridgeLabz</h1>
+  <h1>{{this.title}}</h1>
+  <img [src]="imgUrl" alt="The BridgeLabz logo: a Bridege to Employment through a Lab Works ">
 </div>
+
+<router-outlet></router-outlet>
