--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<div class="container">
-  <h1>{{this.title}}</h1>
+<div>
+  <h1> Hello {{this.userName}} from BridgeLabz</h1>
   <img [src]="imgUrl" (click)="onClick($event)"
         alt="The BridgeLabz logo: a Bridege to Employment through a Lab Works "/>
 </div>
-
+<div>
+  <input [(ngModel)]="userName"/>
+</div>
 <router-outlet></router-outlet>
