--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
         alt="The BridgeLabz logo: a Bridege to Employment through a Lab Works "/>
 </div>
 <div>
-  <input [(ngModel)]="userName"/>
+  <input (input)="onInput($event)" [(ngModel)]="userName"/>
+  <span class="error-output">{{this.nameError}}</span>
 </div>
 <router-outlet></router-outlet>
